examples/test/testpolicy17177.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17177
  namespace: namespace394
spec:
  podSelector:
    matchLabels:
      key36: value38
      key45: value10
      key27: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value45
          key35: value39
          key38: value24
      podSelector:
        matchLabels:
          key40: value42
          key34: value33
